Fixed scroll element alignment

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ html,body{
 }
 #desc {
 	position:absolute;
-	top:60%;
+	top:75%;
 }
 #getAnythingDoneDiv{
 	position:absolute;
